removed some code to make it work

--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Drawing Board</title>
+    <title>Paint With Friends</title>
     <style>
         canvas {
             border: 1px solid #000;
+            background: black;
             display: block;
             margin: auto;
         }
