fat refactor we can now do stuff way ezier

--- a/client/client.html
+++ b/client/client.html
@@ -20,7 +20,7 @@
       #toolbar {
         width: 100svw;
         height: var(--toolheight);
-        background-color: #ddd;
+        background-color: black;
       }
       #drawingarea {
         width: 100svw;
@@ -33,7 +33,8 @@
       }
 
       input[type="number"] {
-        width: 4rem;
+        width: var(--toolheight);
+        height: var(--toolheight);
       }
       canvas {
         image-rendering: pixelated;
