brush size baby!

--- a/client/client.html
+++ b/client/client.html
@@ -45,7 +45,7 @@
   <body>
     <div id="toolbar">
       <input type="color" id="colorPicker" />
-      <input id="brush-size" type="number" min="0" value="1" step="1" />
+      <input type="number" id="brush-size"  min="0" value="1" step="1" />
       <select id="default-sizes">
         <option value="1">1 px</option>
         <option value="2">2 px</option>
@@ -58,5 +58,5 @@
     </div>
   </body>
 
-  <script type="module"src="client.js"></script>
+  <script type="module" src="client.js"></script>
 </html>
