--- a/client/client.html
+++ b/client/client.html
@@ -40,6 +40,12 @@
         image-rendering: pixelated;
         image-rendering: crisp-edges; /* Fallback for older browsers */
       }
+      .cursor {
+        width: calc(var(--toolheight) / 3);
+        height: calc(var(--toolheight) / 3);
+        position: absolute;
+        background-color: cadetblue;
+      }
     </style>
   </head>
   <body>
