--- a/client/client.html
+++ b/client/client.html
@@ -16,6 +16,7 @@
       body {
         height: 100svh;
         width: 100svw;
+        
       }
       #toolbar {
         width: 100svw;
@@ -25,6 +26,9 @@
       #drawingarea {
         width: 100svw;
         height: calc(100svh - var(--toolheight));
+        cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><circle cx="16" cy="16" r="10" fill="blue"/></svg>')
+            16 16,
+          auto;
       }
 
       input[type="color"] {
@@ -51,7 +55,7 @@
   <body>
     <div id="toolbar">
       <input type="color" id="colorPicker" />
-      <input type="number" id="brush-size"  min="0" value="1" step="1" />
+      <input type="number" id="brush-size" min="0" value="1" step="1" />
       <select id="default-sizes">
         <option value="1">1 px</option>
         <option value="2">2 px</option>
