--- a/client/client.html
+++ b/client/client.html
@@ -26,7 +26,7 @@
       #drawingarea {
         width: 100svw;
         height: calc(100svh - var(--toolheight));
-        cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><circle cx="16" cy="16" r="10" fill="blue"/></svg>')
+        cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><circle cx="16" cy="16" r="5" fill="black"/></svg>')
             16 16,
           auto;
       }
