--- a/client/client.html
+++ b/client/client.html
@@ -4,50 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Canvas Click to Draw</title>
-    <style>
-      :root {
-        --toolheight: 2rem; /* Define the variable */
-      }
-
-      * {
-        margin: 0;
-        overflow: hidden;
-      }
-      body {
-        height: 100svh;
-        width: 100svw;
-        
-      }
-      #toolbar {
-        width: 100svw;
-        height: var(--toolheight);
-        background-color: black;
-      }
-      #drawingarea {
-        width: 100svw;
-        height: calc(100svh - var(--toolheight));
-      }
-
-      input[type="color"] {
-        width: var(--toolheight);
-        height: var(--toolheight);
-      }
-
-      input[type="number"] {
-        width: var(--toolheight);
-        height: var(--toolheight);
-      }
-      canvas {
-        image-rendering: pixelated;
-        image-rendering: crisp-edges; /* Fallback for older browsers */
-      }
-      .cursor {
-        width: calc(var(--toolheight) / 3);
-        height: calc(var(--toolheight) / 3);
-        position: absolute;
-        background-color: cadetblue;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div id="toolbar">
