added primary & secondary colors with corresponding left & right click

--- a/client/client.html
+++ b/client/client.html
@@ -9,6 +9,7 @@
   <body>
     <div id="toolbar">
       <input type="color" id="colorPicker" />
+      <input type="color" id="colorPicker2" />
       <input type="number" id="brush-size" min="0" value="1" step="1" />
       <select id="default-sizes">
         <option value="1">1 px</option>
