--- a/client/client.html
+++ b/client/client.html
@@ -10,25 +10,26 @@
     <div id="toolbar">
       <input type="color" id="primaryPicker" />
       <input type="color" id="secondaryPicker" value="#ffffff" />
-
+<!-- //ALAN change this to be a pop  -->
       <div class="custom-dropdown">
-        <input type="text" placeholder="Enter brush size..." id="customInput" />
+        <input type="text" placeholder="Enter brush size..." id="customInput" style="padding-left:12px; text-align:left;"/>
+        
         <ul id="dropdownOptions" class="dropdown-list">
           <li class="dropdown-item" data-value="1">
-            <span class="size-label">1 </span>
-            <div class="size-line" style="height: 1px; width: 135px;"></div>
+            <span class="size-label">1</span>
+            <div class="size-line" style="height: 1px;"></div>
           </li>
           <li class="dropdown-item" data-value="2">
-            <span class="size-label">2 </span>
-            <div class="size-line" style="height: 2px; width: 135px;"></div>
+            <span class="size-label">2</span>
+            <div class="size-line" style="height: 2px;"></div>
           </li>
           <li class="dropdown-item" data-value="3">
-            <span class="size-label">3 </span>
-            <div class="size-line" style="height: 3px; width: 135px;"></div>
+            <span class="size-label">3</span>
+            <div class="size-line" style="height: 3px;"></div>
           </li>
           <li class="dropdown-item" data-value="4">
-            <span class="size-label">4 </span>
-            <div class="size-line" style="height: 4px; width: 135px;"></div>
+            <span class="size-label">4</span>
+            <div class="size-line" style="height: 4px;"></div>
           </li>
         </ul>
       </div>
