minor stuff + started on filltool

--- a/client/client.html
+++ b/client/client.html
@@ -32,7 +32,10 @@
           </li>
         </ul>
       </div>
-
+      
+      <button id="fillTool" title="fillTool">
+        <img src="fillTool2.png" alt="fillTool" />
+      </button>
       
     </div> 
     <div id="drawingarea">
