--- a/client/client.html
+++ b/client/client.html
@@ -36,6 +36,10 @@
       <button id="fillTool" title="fillTool">
         <img src="fillTool2.png" alt="fillTool" />
       </button>
+
+      <button id="pencil" title="pencil">
+        <img src="pencil.png" alt="pencil" />
+      </button>
       
     </div> 
     <div id="drawingarea">
