fixed the scoll bug with the brushsize

--- a/client/client.html
+++ b/client/client.html
@@ -28,7 +28,7 @@
         </button>
       </div>
 
-      <div class="custom-dropdown">
+      <div id="brushsize" class="custom-dropdown">
         <input
           type="text"
           placeholder="Enter brush size..."
