--- a/client/client.html
+++ b/client/client.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Canvas Click to Draw</title>
+    <title>Mr. Paint: Draw together</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="./images/db9c352d-2b8b-4e74-a4b5-26f7d7c4a2b9.webp" />
+
   </head>
   <body>
     <!-- <div id="ribbon"></div>
