MLK day: eraser added + showing activetool

--- a/client/client.html
+++ b/client/client.html
@@ -12,19 +12,23 @@
     <div id="toolbar">
       <div id="main-tools">
         <button id="undo" title="undo (cntrl + z)">
-          <img src="./images/undo.png" alt="undo" />Undo
+          <img src="./images/undo.svg" alt="undo" />Undo
         </button>
 
         <button id="redo" title="redo (cntrl + y)">
-          <img src="./images/redo.png" alt="redo" />
+          <img src="./images/redo.svg" alt="redo" />
         </button>
 
-        <button id="fillTool" title="fillTool">
-          <img src="./images/fillTool2.png" alt="fillTool" />
+        <button id="fillTool" title="fill tool">
+          <img src="./images/fillTool.svg" alt="fillTool" />
         </button>
 
         <button id="pencil" title="pencil">
-          <img src="./images/pencil.png" alt="pencil" />
+          <img src="./images/pencil.svg" alt="pencil" />
+        </button>
+
+        <button id="eraser" title="eraser">
+          <img src="./images/eraser.svg" alt="eraser" />
         </button>
       </div>
 
