ruler and status bar done

--- a/client/client.html
+++ b/client/client.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mr. Paint: Draw together</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/x-icon" href="./images/db9c352d-2b8b-4e74-a4b5-26f7d7c4a2b9.webp" />
-
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/db9c352d-2b8b-4e74-a4b5-26f7d7c4a2b9.webp"
+    />
   </head>
   <body>
     <!-- <div id="ribbon"></div>
@@ -29,7 +32,6 @@
           <img src="./images/pencil.png" alt="pencil" />
         </button>
       </div>
-
       <div id="brushsize" class="custom-dropdown">
         <input
           type="text"
@@ -63,8 +65,22 @@
 
       <div id="colorpalette"></div>
     </div>
-    <div id="drawingarea">
-      <canvas id="myCanvas"></canvas>
+    <div id="mainbody">
+      <div id="top-ruler">
+        <div id="topIndicator"></div>
+      </div>
+      <div id="left-ruler"></div>
+      <div id="drawingarea">
+        <canvas id="myCanvas"></canvas>
+      </div>
+    </div>
+    <div id="statusbar">
+      <div id="mouseposition" class="statusbarValue"></div>
+      <div id="canvassize" class="statusbarValue"></div>
+      <div id="zoompower" class="statusbarValue"></div>
+      <div id="completionbarContainer" class="statusbarValue">
+        <div id="completionbar" class="completionbar"></div>
+      </div>
     </div>
     <script type="module" src="client.js"></script>
   </body>
