--- a/client/client.html
+++ b/client/client.html
@@ -73,7 +73,9 @@
       <div id="top-ruler">
         <div id="topIndicator"></div>
       </div>
-      <div id="left-ruler"></div>
+      <div id="left-ruler">
+        <div id="leftIndicator"></div>
+      </div>
       <div id="drawingarea">
         <canvas id="myCanvas"></canvas>
       </div>
