--- a/client/client.html
+++ b/client/client.html
@@ -36,15 +36,15 @@
           <img src="./images/eraser.svg" alt="eraser" />
         </button>
       </div>
-      <div id="brushsize" class="custom-dropdown">
+      <div id="brushsize" class="custom-dropdown-brushsize-box">
         <input
           type="text"
           placeholder="Enter brush size..."
-          id="customInput"
+          id="customInputBrushsizeBox"
           style="padding-left: 12px; text-align: left"
         />
 
-        <ul id="dropdownOptions" class="dropdown-list">
+        <ul id="dropdownOptions" class="actual-dropdown-list-brushsize-box">
           <li class="dropdown-item" data-value="1">
             <span class="size-label">1</span>
             <div class="size-line" style="height: 1px"></div>
