--- a/client/home.html
+++ b/client/home.html
@@ -1,90 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A collaborative MS Paint-inspired drawing app where creativity meets real-time collaboration.">
+  <head>
+    <meta charset="UTF-8" />
+    
+
+    <meta
+      name="description"
+      content="A collaborative MS Paint-inspired drawing app where creativity meets real-time collaboration."
+    />
     <title>Collaborative MS Paint Clone</title>
     <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background: #f4f4f4;
-            color: #333;
-            max-width: 600px;
-            margin: 2rem auto;
-            padding: 1rem;
-            margin-top: 0;
-            padding-top: 0;
-        }
-        main {
-            max-width: 600px;
-            margin: 2rem auto;
-            padding: 1rem;
-        }
-        main h1 {
-            font-size: 4rem;
-            font-weight: 300;
-            margin-top: 1rem;
-            margin-left: 1rem;
-
-        }
-        main p {
-            line-height: 1.6;
-        }
-        .cta {
-            text-align: center;
-            margin-top: 2rem;
-        }
-        .cta a {
-            display: inline-block;
-            padding: 0.8rem 1.5rem;
-            font-size: 1rem;
-            color: white;
-            background: #777;
-            text-decoration: none;
-            transition: background 0.3s;
-        }
-        .cta a:hover {
-            background: #3e3e3e;
-        }
-        footer {
-            text-align: center;
-            padding: 1rem;
-            margin-top: 2rem;
-            font-size: 0.9rem;
-            color: #777;
-        }
-        footer a {
-            color: #6200ea;
-            text-decoration: none;
-        }
-        footer a:hover {
-            text-decoration: underline;
-        }
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        background: #d1d1d1;
+        color: #6d6d6d;
+      }
+      header {
+        background: #d1d1d1;
+        color: #6d6d6d;
+        max-width: 500px;
+        margin: 2rem auto;
+        padding: 1rem;
+        margin-top: 0;
+        padding-top: 0;
+      }
+      main {
+        max-width: 500px;
+        margin: 2rem auto;
+        padding: 1rem;
+      }
+      main h1 {
+        font-size: 4rem;
+        font-weight: 300;
+      }
+      main p {
+        line-height: 1.6;
+      }
+      .cta {
+        text-align: center;
+        margin-top: 2rem;
+      }
+      .cta a {
+        display: inline-block;
+        padding: 0.8rem 1.5rem;
+        font-size: 1rem;
+        color: white;
+        background: #6d6d6d;
+        text-decoration: none;
+        transition: background 0.3s;
+      }
+      .cta a:hover {
+        background: #3e3e3e;
+      }
+      footer {
+        text-align: center;
+        padding: 1rem;
+        margin-top: 2rem;
+        font-size: 0.9rem;
+        color: #777;
+      }
+      footer a {
+        color: #6200ea;
+        text-decoration: none;
+      }
+      footer a:hover {
+        text-decoration: underline;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h4>Mr. Paint</h4>
+      <h4>Mr. Paint</h4>
     </header>
     <main>
-        <div style="display: flex;"><img src="/client/db9c352d-2b8b-4e74-a4b5-26f7d7c4a2b9.webp" alt="A sample image" width="100" height="100">
-            <h1>Paint Together</h1></div>
-        
-        <p>
-            We've developed a collaborative image editor which uses the well understood controls of Microsoft's Paint.
-        </p>
+      <h1>Paint Together</h1>
+      <p>
+        We've developed a collaborative image editor which uses the well
+        understood controls of Microsoft's Paint.
+      </p>
 
-        <div class="cta">
-            <a href="/app">Let's paint</a>
-        </div>
+      <div class="cta">
+        <a href="https://mrpaint.onrender.com/">Let's paint</a>
+      </div>
     </main>
-
-</body>
+  </body>
 </html>
