--- a/client/client.html
+++ b/client/client.html
@@ -42,6 +42,10 @@
         <button id="eraser" title="eraser">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M690-240h190v80H610l80-80Zm-500 80-85-85q-23-23-23.5-57t22.5-58l440-456q23-24 56.5-24t56.5 23l199 199q23 23 23 57t-23 57L520-160H190Zm296-80 314-322-198-198-442 456 64 64h262Zm-6-240Z"/></svg>
         </button>
+
+        <button id="straightLine" title="straightLine">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M195.17-195.14q-10.67-10.64-10.67-24.83 0-14.18 10.67-24.86l520-520q10.63-10.67 24.81-10.67 14.17 0 24.85 10.64 10.67 10.64 10.67 24.83 0 14.18-10.67 24.86l-520 520q-10.63 10.67-24.81 10.67-14.17 0-24.85-10.64Z"/></svg>          
+        </button>
       </div>
       <div id="brushsize" class="custom-dropdown-brushsize-box">
         <input
