--- a/client/client.html
+++ b/client/client.html
@@ -15,70 +15,143 @@
     <!-- <div id="ribbon"></div>
     <div id="quicktoolbar"></div> -->
     <div id="toolbar">
-      <div id="main-tools">
-        <!-- <button id="undo" title="undo (cntrl + z)">
+      <div id="toolbar-left">
+        <div id="main-tools">
+          <!-- <button id="undo" title="undo (cntrl + z)">
           <img src="./images/undo.svg" alt="undo" />Undo
         </button> -->
 
-        <button id="undo" title="undo (cntrl + z)">
-          <!-- Inline SVG for undo -->
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M280-200v-80h284q63 0 109.5-40T720-420q0-60-46.5-100T564-560H312l104 104-56 56-200-200 200-200 56 56-104 104h252q97 0 166.5 63T800-420q0 94-69.5 157T564-200H280Z"/></svg>
-          Undo
-        </button>
-        
+          <button id="undo" title="undo (cntrl + z)">
+            <!-- Inline SVG for undo -->
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#5f6368"
+            >
+              <path
+                d="M280-200v-80h284q63 0 109.5-40T720-420q0-60-46.5-100T564-560H312l104 104-56 56-200-200 200-200 56 56-104 104h252q97 0 166.5 63T800-420q0 94-69.5 157T564-200H280Z"
+              />
+            </svg>
+            Undo
+          </button>
 
-        <button id="redo" title="redo (cntrl + y)">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M396-200q-97 0-166.5-63T160-420q0-94 69.5-157T396-640h252L544-744l56-56 200 200-200 200-56-56 104-104H396q-63 0-109.5 40T240-420q0 60 46.5 100T396-280h284v80H396Z"/></svg>
-        </button>
+          <button id="redo" title="redo (cntrl + y)">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#5f6368"
+            >
+              <path
+                d="M396-200q-97 0-166.5-63T160-420q0-94 69.5-157T396-640h252L544-744l56-56 200 200-200 200-56-56 104-104H396q-63 0-109.5 40T240-420q0 60 46.5 100T396-280h284v80H396Z"
+              />
+            </svg>
+          </button>
 
-        <button id="fillTool" title="fill tool">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M346-140 100-386q-10-10-15-22t-5-25q0-13 5-25t15-22l230-229-106-106 62-65 400 400q10 10 14.5 22t4.5 25q0 13-4.5 25T686-386L440-140q-10 10-22 15t-25 5q-13 0-25-5t-22-15Zm47-506L179-432h428L393-646Zm399 526q-36 0-61-25.5T706-208q0-27 13.5-51t30.5-47l42-54 44 54q16 23 30 47t14 51q0 37-26 62.5T792-120Z"/></svg>
-        </button>
+          <button id="fillTool" title="fill tool">
+            <svg viewBox="0 -960 960 960">
+              <path
+                d="M346-140 100-386q-10-10-15-22t-5-25q0-13 5-25t15-22l230-229-106-106 62-65 400 400q10 10 14.5 22t4.5 25q0 13-4.5 25T686-386L440-140q-10 10-22 15t-25 5q-13 0-25-5t-22-15Zm47-506L179-432h428L393-646Zm399 526q-36 0-61-25.5T706-208q0-27 13.5-51t30.5-47l42-54 44 54q16 23 30 47t14 51q0 37-26 62.5T792-120Z"
+              />
+            </svg>
+          </button>
 
-        <button id="pencil" title="pencil">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/></svg>
-        </button>
+          <button id="pencil" title="pencil">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#5f6368"
+            >
+              <path
+                d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"
+              />
+            </svg>
+          </button>
 
-        <button id="eraser" title="eraser">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M690-240h190v80H610l80-80Zm-500 80-85-85q-23-23-23.5-57t22.5-58l440-456q23-24 56.5-24t56.5 23l199 199q23 23 23 57t-23 57L520-160H190Zm296-80 314-322-198-198-442 456 64 64h262Zm-6-240Z"/></svg>
-        </button>
+          <button id="eraser" title="eraser">
+            <svg viewBox="0 -960 960 960">
+              <path
+                d="M690-240h190v80H610l80-80Zm-500 80-85-85q-23-23-23.5-57t22.5-58l440-456q23-24 56.5-24t56.5 23l199 199q23 23 23 57t-23 57L520-160H190Zm296-80 314-322-198-198-442 456 64 64h262Zm-6-240Z"
+              />
+            </svg>
+          </button>
 
-        <button id="straightLine" title="straightLine">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M195.17-195.14q-10.67-10.64-10.67-24.83 0-14.18 10.67-24.86l520-520q10.63-10.67 24.81-10.67 14.17 0 24.85 10.64 10.67 10.64 10.67 24.83 0 14.18-10.67 24.86l-520 520q-10.63 10.67-24.81 10.67-14.17 0-24.85-10.64Z"/></svg>          
-        </button>
+          <button id="straightLine" title="straightLine">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#5f6368"
+            >
+              <path
+                d="M195.17-195.14q-10.67-10.64-10.67-24.83 0-14.18 10.67-24.86l520-520q10.63-10.67 24.81-10.67 14.17 0 24.85 10.64 10.67 10.64 10.67 24.83 0 14.18-10.67 24.86l-520 520q-10.63 10.67-24.81 10.67-14.17 0-24.85-10.64Z"
+              />
+            </svg>
+          </button>
+        </div>
+        <div id="brushsize" class="custom-dropdown-brushsize-box">
+          <input
+            type="text"
+            placeholder="Enter brush size..."
+            id="customInputBrushsizeBox"
+          />
+
+          <ul id="dropdownOptions" class="actual-dropdown-list-brushsize-box">
+            <li class="dropdown-item" data-value="1">
+              <span class="size-label">1</span>
+              <div class="size-line" style="height: 1px"></div>
+            </li>
+            <li class="dropdown-item" data-value="2">
+              <span class="size-label">2</span>
+              <div class="size-line" style="height: 2px"></div>
+            </li>
+            <li class="dropdown-item" data-value="3">
+              <span class="size-label">3</span>
+              <div class="size-line" style="height: 3px"></div>
+            </li>
+            <li class="dropdown-item" data-value="4">
+              <span class="size-label">4</span>
+              <div class="size-line" style="height: 4px"></div>
+            </li>
+          </ul>
+        </div>
+
+        <input type="color" id="primaryPicker" />
+        <input type="color" id="secondaryPicker" value="#ffffff" />
+
+        <div id="colorpalette" class="colorpalette-full"></div>
+
+        <div id="colorpalette-condensed" class="colorpalette-condensed">
+          <button id="paletteToggle">
+            <svg
+              viewBox="0 -960 960 960"
+            >
+              <path
+                d="M480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 32.5-156t88-127Q256-817 330-848.5T488-880q80 0 151 27.5t124.5 76q53.5 48.5 85 115T880-518q0 115-70 176.5T640-280h-74q-9 0-12.5 5t-3.5 11q0 12 15 34.5t15 51.5q0 50-27.5 74T480-80Zm0-400Zm-220 40q26 0 43-17t17-43q0-26-17-43t-43-17q-26 0-43 17t-17 43q0 26 17 43t43 17Zm120-160q26 0 43-17t17-43q0-26-17-43t-43-17q-26 0-43 17t-17 43q0 26 17 43t43 17Zm200 0q26 0 43-17t17-43q0-26-17-43t-43-17q-26 0-43 17t-17 43q0 26 17 43t43 17Zm120 160q26 0 43-17t17-43q0-26-17-43t-43-17q-26 0-43 17t-17 43q0 26 17 43t43 17ZM480-160q9 0 14.5-5t5.5-13q0-14-15-33t-15-57q0-42 29-67t71-25h70q66 0 113-38.5T800-518q0-121-92.5-201.5T488-800q-136 0-232 93t-96 227q0 133 93.5 226.5T480-160Z"
+              />
+            </svg>
+          </button>
+          <div class="dropdown" id="paletteDropdown"></div>
+        </div>
       </div>
-      <div id="brushsize" class="custom-dropdown-brushsize-box">
-        <input
-          type="text"
-          placeholder="Enter brush size..."
-          id="customInputBrushsizeBox"
-          style="padding-left: 12px; text-align: left"
-        />
 
-        <ul id="dropdownOptions" class="actual-dropdown-list-brushsize-box">
-          <li class="dropdown-item" data-value="1">
-            <span class="size-label">1</span>
-            <div class="size-line" style="height: 1px"></div>
-          </li>
-          <li class="dropdown-item" data-value="2">
-            <span class="size-label">2</span>
-            <div class="size-line" style="height: 2px"></div>
-          </li>
-          <li class="dropdown-item" data-value="3">
-            <span class="size-label">3</span>
-            <div class="size-line" style="height: 3px"></div>
-          </li>
-          <li class="dropdown-item" data-value="4">
-            <span class="size-label">4</span>
-            <div class="size-line" style="height: 4px"></div>
-          </li>
-        </ul>
+      <div id="toolbar-right">
+        <input type="color" id="userColor" value="#6d6d6d" />
+        <div id="username" class="custom-dropdown-username-box">
+          <input
+            type="text"
+            placeholder="Enter username..."
+            value=""
+            id="customInputUsernameBox"
+          />
+        </div>
       </div>
-
-      <input type="color" id="primaryPicker" />
-      <input type="color" id="secondaryPicker" value="#ffffff" />
-
-      <div id="colorpalette"></div>
     </div>
     <div id="mainbody">
       <div id="top-ruler">
